--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "description": "Sharing video-translation service",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --reporter spec \"common/**/*.test.js\""
+  },
   "devDependencies": {
     "@types/es6-shim": "^0.31.32",
     "@types/gulp": "^4.0.2",
     "@types/gulp-typescript": "0.0.33",
     "@types/node": "^7.0.12",
+    "mocha": "^2.4.5",
+    "ts-node@": "^2.0.0",
     "typescript": "^2.2.2"
   },
   "repository": {
